package afb.astyann.aiorchestrator.domain;

public enum AITaskType {
    ANALYZE_REQUIREMENTS,
    GENERATE_DOCUMENT,
    GENERATE_UML,
    GENERATE_CODE,
    VALIDATE_CONTENT,
    GENERATE_DEPLOYMENT
}
