' ============================================================
' 8. AI ORCHESTRATOR SERVICE — Design Class Diagram
' ============================================================
@startuml AIService_DesignClass
left to right direction
skinparam classAttributeIconSize 0

package "controller" {
  class AIController {
    -aiService : IAIService
    +generateContent(dto : AIRequestDTO) : ResponseEntity<AIResponseDTO>
    +analyzeRequirements(dto : AnalyzeRequestDTO) : ResponseEntity<AIResponseDTO>
    +validateContent(dto : ValidateRequestDTO) : ResponseEntity<AIResponseDTO>
    +retrieveContext(dto : ContextRequestDTO) : ResponseEntity<ContextResponseDTO>
  }
}

package "service" {
  interface IAIService {
    +generateContent(request : AIRequestDTO) : AIResponseDTO
    +analyzeRequirements(request : AnalyzeRequestDTO) : AIResponseDTO
    +validateContent(request : ValidateRequestDTO) : AIResponseDTO
    +retrieveContext(request : ContextRequestDTO) : ContextResponseDTO
  }

  class AIServiceImpl {
    -ragClient : RAGServiceClient
    -metaModelClient : MetaModelServiceClient
    -providerRouter : AIProviderRouter
    +generateContent(request : AIRequestDTO) : AIResponseDTO
    +analyzeRequirements(request : AnalyzeRequestDTO) : AIResponseDTO
    +validateContent(request : ValidateRequestDTO) : AIResponseDTO
    +retrieveContext(request : ContextRequestDTO) : ContextResponseDTO
  }

  class AIProviderRouter {
    -anthropicProvider : AnthropicProvider
    -openAPIProvider : OpenAPIProvider
    +route(request : AIRequest) : AIResponse
    +selectProvider(taskType : AITaskType) : AIProvider
  }
}

package "provider" {
  interface AIProvider {
    +complete(prompt : String, config : ProviderConfig) : String
    +getProviderName() : String
  }

  class AnthropicProvider {
    -apiKey : String
    -modelName : String
    -baseUrl : String
    -httpClient : HttpClient
    +complete(prompt : String, config : ProviderConfig) : String
    +getProviderName() : String
  }

  class OpenAPIProvider {
    -apiKey : String
    -modelName : String
    -baseUrl : String
    -httpClient : HttpClient
    +complete(prompt : String, config : ProviderConfig) : String
    +getProviderName() : String
  }

  class ProviderConfig {
    -maxTokens : int
    -temperature : double
    -topP : double
    -systemPrompt : String
  }
}

package "domain" {
  class AIRequest {
    -requestId : UUID
    -projectId : UUID
    -taskType : AITaskType
    -prompt : String
    -context : String
    -config : ProviderConfig
    -createdAt : LocalDateTime
  }

  class AIResponse {
    -responseId : UUID
    -requestId : UUID
    -content : String
    -providerName : String
    -tokensUsed : int
    -createdAt : LocalDateTime
  }

  class ReferenceContext {
    -contextId : UUID
    -projectId : UUID
    -sourceType : String
    -content : String
    -embeddingVector : float[]
    -indexedDate : LocalDateTime
  }

  enum AITaskType {
    ANALYZE_REQUIREMENTS
    GENERATE_DOCUMENT
    GENERATE_UML
    GENERATE_CODE
    VALIDATE_CONTENT
    GENERATE_DEPLOYMENT
  }
}

package "dto" {
  class AIRequestDTO {
    +projectId : UUID
    +taskType : AITaskType
    +prompt : String
    +contextKeys : List<String>
  }

  class AIResponseDTO {
    +responseId : UUID
    +content : String
    +providerName : String
    +tokensUsed : int
  }

  class AnalyzeRequestDTO {
    +projectId : UUID
    +rawInput : String
  }

  class ValidateRequestDTO {
    +projectId : UUID
    +content : String
    +rules : String
  }

  class ContextRequestDTO {
    +projectId : UUID
    +query : String
    +topK : int
  }

  class ContextResponseDTO {
    +context : String
    +sources : List<String>
  }
}

package "client" {
  class RAGServiceClient {
    +retrieveContext(projectId : UUID, query : String, topK : int) : String
    +getSources(projectId : UUID, query : String) : List<String>
  }

  class MetaModelServiceClient {
    +getConstraints(taskType : AITaskType) : String
    +getPromptTemplate(taskType : AITaskType) : String
  }
}

AIController        ..>  IAIService
AIServiceImpl        ..|> IAIService
AIServiceImpl        ..>  AIProviderRouter
AIServiceImpl        ..>  RAGServiceClient
AIServiceImpl        ..>  MetaModelServiceClient
AIProviderRouter     ..>  AIProvider
AIProviderRouter     ..>  AnthropicProvider
AIProviderRouter     ..>  OpenAPIProvider
AnthropicProvider    ..|> AIProvider
OpenAPIProvider      ..|> AIProvider
AnthropicProvider    ..>  ProviderConfig
OpenAPIProvider      ..>  ProviderConfig
AIRequest            ..>  AITaskType
AIRequest            ..>  ProviderConfig
AIServiceImpl        ..>  AIRequest
AIServiceImpl        ..>  AIResponse
AIServiceImpl        ..>  ReferenceContext

@enduml